[gd_scene load_steps=6 format=3 uid="uid://g14d8pu5bqo0"]

[ext_resource type="Theme" uid="uid://yys17mde0tii" path="res://themes/buttons_theme.tres" id="1_huge6"]
[ext_resource type="Script" path="res://scripts/lvl_btn.gd" id="2_eh20m"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="3_ug472"]

[sub_resource type="SystemFont" id="SystemFont_6t6ul"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_o3d5p"]
font_names = PackedStringArray("Impact")

[node name="btn" type="Button"]
offset_right = 115.0
offset_bottom = 70.0
theme = ExtResource("1_huge6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.611765, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_6t6ul")
theme_override_font_sizes/font_size = 50
text = "Level15"
script = ExtResource("2_eh20m")

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 53.0
offset_right = 130.0
offset_bottom = 118.0
theme_override_fonts/font = SubResource("SystemFont_o3d5p")
theme_override_font_sizes/font_size = 24
text = "Score:  SS
Time: 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="btn_click" parent="." instance=ExtResource("3_ug472")]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
